--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -121,4 +121,26 @@
   .hide-scrollbar::-webkit-scrollbar {
     display: none;
   }
+
+  .moving-text {
+    width: 100%;
+    animation: typing 1s steps(17), blink 0.5s step-end infinite alternate;
+    white-space: nowrap;
+    overflow: hidden;
+    border-right: 3px solid;
+    font-family: monospace;
+    font-size: 2em;
+  }
+
+  @keyframes typing {
+    from {
+      width: 0;
+    }
+  }
+
+  @keyframes blink {
+    50% {
+      border-color: transparent;
+    }
+  }
 }
